@@ -6,6 +6,7 @@
  Copyright (C) 2000-2006 Keith Godfrey and Maxym Mykhalchuk
                2007-2010 Didier Briel
                2013 Alex Buloichik, Didier Briel, Piotr Kulik
+               2014 Didier Briel
                Home page: http://www.omegat.org/
                Support center: http://groups.yahoo.com/group/OmegaT/
 
@@ -54,6 +55,7 @@ import org.omegat.util.StringUtil;
 public class XLIFFDialect extends DefaultXMLDialect {
     private boolean forceShortCutToF;
     private boolean ignoreTypeForPhTags;
+    private boolean ignoreTypeForBptTags;
     
     public XLIFFDialect() {
     }
@@ -88,6 +90,7 @@ public class XLIFFDialect extends DefaultXMLDialect {
             
             forceShortCutToF = options.getForceShortcutToF();
             ignoreTypeForPhTags = options.getIgnoreTypeForPhTags();
+            ignoreTypeForBptTags = options.getIgnoreTypeForBptTags();
         }
 
     }
@@ -169,7 +172,7 @@ public class XLIFFDialect extends DefaultXMLDialect {
                     // XLIFF specification requires 'rid' and 'id' attributes,
                     // but some tools uses 'i' attribute like for TMX
                     tagHandler.startBPT(tag.getAttribute("rid"), tag.getAttribute("id"), tag.getAttribute("i"));
-                    shortcutLetter = calcTagShortcutLetter(tag);
+                    shortcutLetter = calcTagShortcutLetter(tag, ignoreTypeForBptTags);
                     tagHandler.setTagShortcutLetter(shortcutLetter);
                     tagIndex = tagHandler.endBPT();
                     shortcut = "<" + (shortcutLetter != 0 ? shortcutLetter : 'f') + tagIndex + '>';
